--- a/ui/qt/qml.qrc
+++ b/ui/qt/qml.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>Odyssey.png</file>
+        <file>Slider.qml</file>
+        <file>Button.png</file>
     </qresource>
 </RCC>
