--- a/ui/qt/qml.qrc
+++ b/ui/qt/qml.qrc
@@ -4,5 +4,6 @@
         <file>Odyssey.png</file>
         <file>Slider.qml</file>
         <file>Button.png</file>
+        <file>Rocker.qml</file>
     </qresource>
 </RCC>
