replace C++ class by QML singleton

--- a/ui/qt/qml.qrc
+++ b/ui/qt/qml.qrc
@@ -5,5 +5,7 @@
         <file>Slider.qml</file>
         <file>Button.png</file>
         <file>Rocker.qml</file>
+        <file>Synth.qml</file>
+        <file>qmldir</file>
     </qresource>
 </RCC>
